# bench_cublas_opt

./: CMakeLists.txt  README.md  bench_config.cuh  bench_cublas_12x12.cu  bench_cublas_16x16.cu  bench_cublas_3x3.cu  bench_cublas_4x4.cu  bench_cublas_6x6.cu  bench_cutlass_3x3.cu  bench_small_batched_gemm_12x12.cu  bench_small_batched_gemm_16x16.cu  bench_small_batched_gemm_4x4.cu  bench_small_batched_gemm_6x6.cu  bench_small_batched_gemm_pipelined_12x12.cu  bench_small_batched_gemm_pipelined_16x16.cu  bench_small_batched_gemm_pipelined_4x4.cu  bench_small_batched_gemm_pipelined_6x6.cu  bench_tiny_batched_gemm_2x2.cu  bench_tiny_batched_gemm_2x2_pipeline.cu  bench_tiny_batched_gemm_3x3.cu  bench_tiny_batched_gemm_3x3_nocoal.cu  bench_tiny_batched_gemm_3x3_pipeline.cu  bench_tiny_batched_gemm_4x4.cu  bench_tiny_batched_gemm_6x6.cu  bench_tiny_batched_gemm_cls_3x3.cu  main.cu  recursive_matrix.cuh  small_batched_gemm.cuh  small_batched_gemm_pipeline.cuh  tiny_batched_gemm.cuh  tiny_batched_gemm_cls.cuh  tiny_batched_gemm_no_coalesc.cuh  tiny_batched_gemm_pipeline.cuh  understand_cub_loaders.cu  vectorized_copy.cuh
